alignment fix

--- a/css/about-zyrtec.css
+++ b/css/about-zyrtec.css
@@ -635,4 +635,10 @@
     width: 100%;
     padding: 14px 24px;
   }
+
+  .safety-highlight {
+
+    margin: 0rem 3rem 0;
+
+  }
 }
